UAE-564_108 QA5 stop wishlist message from overlapping account menu

--- a/app/design/frontend/UnitedArtsEducation/unitednow/Magento_Customer/web/css/source/_extend.less
+++ b/app/design/frontend/UnitedArtsEducation/unitednow/Magento_Customer/web/css/source/_extend.less
@@ -16,6 +16,12 @@
                 padding: 0 4px;
             }
         }
+
+        .message{
+            &.success{
+                margin-top:25px;
+            }
+        }
     }
 }
 
